--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ep_markdown",
-  "description": "Edit as Markdown in Etherpad",
-  "version": "0.0.2",
+  "description": "Edit and Export as Markdown in Etherpad",
+  "version": "0.0.3",
   "author": {
     "name": "John McLear",
     "email": "john@mclear.co.uk",
