--- a/package.json
+++ b/package.json
@@ -16,11 +16,31 @@
   },
   "contributors": [],
   "peerDependencies": {
+    "ep_etherpad-lite": ">=1.8.6",
     "ep_headings2": "*"
   },
   "license": "Apache-2.0",
   "funding": {
     "type": "individual",
     "url": "http://etherpad.org/"
+  },
+  "devDependencies": {
+    "eslint": "^7.14.0",
+    "eslint-config-etherpad": "^1.0.15",
+    "eslint-plugin-mocha": "^8.0.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prefer-arrow": "^1.2.2",
+    "eslint-plugin-promise": "^4.2.1"
+  },
+  "eslintConfig": {
+    "root": true,
+    "extends": "etherpad/plugin"
+  },
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
+  },
+  "engines": {
+    "node": ">=10.13.0"
   }
 }
