autofixes from Etherpad checkPlugins.js

--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "url": "http://etherpad.org/"
   },
   "devDependencies": {
-    "eslint": "^7.14.0",
-    "eslint-config-etherpad": "^1.0.15",
+    "eslint": "^7.17.0",
+    "eslint-config-etherpad": "^1.0.21",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-arrow": "^1.2.2",
-    "eslint-plugin-promise": "^4.2.1"
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.10.0"
   },
   "eslintConfig": {
     "root": true,
