--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -29,6 +29,12 @@ jobs:
       with:
         path: ./node_modules/__tmp
 
+    - name: export GIT_HASH to env
+      id: environment
+      run: |
+        cd ./node_modules/__tmp
+        echo "::set-output name=sha_short::$(git rev-parse --short ${{ github.sha }})"
+
     - name: Determine plugin name
       id: plugin_name
       run: |
@@ -36,17 +42,17 @@ jobs:
         npx -c 'printf %s\\n "::set-output name=plugin_name::${npm_package_name}"'
 
     - name: Rename plugin directory
-      run: |
-        mv ./node_modules/__tmp ./node_modules/"${PLUGIN_NAME}"
       env:
         PLUGIN_NAME: ${{ steps.plugin_name.outputs.plugin_name }}
+      run: |
+        mv ./node_modules/__tmp ./node_modules/"${PLUGIN_NAME}"
 
     - name: Install plugin dependencies
+      env:
+        PLUGIN_NAME: ${{ steps.plugin_name.outputs.plugin_name }}
       run: |
         cd ./node_modules/"${PLUGIN_NAME}"
         npm ci
-      env:
-        PLUGIN_NAME: ${{ steps.plugin_name.outputs.plugin_name }}
 
     # This must be run after setting up the plugin, otherwise npm will try to
     # hoist common dependencies by removing them from src/node_modules and
@@ -57,10 +63,6 @@ jobs:
     # tools such as `npm outdated`, `npm update`, and some ESLint rules.
     - name: Install Etherpad core dependencies
       run: src/bin/installDeps.sh
-
-    - name: export GIT_HASH to env
-      id: environment
-      run: echo "::set-output name=sha_short::$(git rev-parse --short ${{ github.sha }})"
 
     - name: Create settings.json
       run: cp settings.json.template settings.json
