--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/johnmclear/ep_markdown"
+    "url": "https://github.com/ether/ep_markdown.git"
   },
   "dependencies": {
     "showdown": "*"
