--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "devDependencies": {
     "eslint": "^8.57.0",
     "eslint-config-etherpad": "^4.0.4",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.12.4"
   },
   "scripts": {
     "lint": "eslint .",
