--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "https://github.com/ether/ep_markdown.git"
   },
   "dependencies": {
+    "express-rate-limit": "^7.2.0",
     "showdown": "*"
   },
   "contributors": [],
